# iguagile-engine

./: .env  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  fail_test.bash  go.mod  go.sum  index.html  main.go  main_test.go  websocket.go  websocket_test.go
.circleci/: config.yml
.github/workflows/: actionlint.yml  ci.yml  codeql-analysis.yml  docker-image.yml
client/: client.go
cmd/client-sample/: main.go
cmd/quic-server/: main.go
cmd/relay/: main.go
cmd/sample-1/: main.go
cmd/tcp-server/: main.go
data/: binary.go  binary_test.go
hub/: hub.go
id/: generator.go  generator_test.go
iguagile/: binary.go  binary_test.go  client.go  conn.go  engine.go  gameobject.go  id.go  quic_benchmark_test.go  quic_test.go  relay_test.go  room.go  rpc-buffer.go  server.go  service.go  store.go  store_test.go  stream.go  tcp-client.go  tcp-conn.go  tcp-server.go  tcp_benchmark_test.go  tcp_test.go  websocket-client.go  websocket-conn.go  websocket-server.go  websocket_test.go
proto/: tracker.proto
src/: client.rs  engine.rs  id.rs  id_generator.rs  main.rs  relay.rs  room.proto  room.rs  store.rs
